--- a/Tunify/subscriptions.html
+++ b/Tunify/subscriptions.html
@@ -12,11 +12,11 @@
         <div class="logo">Tunify</div>
         <nav>
             <ul>
-                <li><a href="index1.php">Home</a></li>
-                <li><a href="songs.php">Songs</a></li>
-                <li><a href="albums.html">Albums</a></li>
-                <li><a href="http://localhost/tunify/albums.php">Artists</a></li>
-                <li><a href="playlists.html">Playlists</a></li>
+                <li><a href="http://localhost/tunify/index1.php">Home</a></li>
+                <li><a href="http://localhost/tunify/songs.php">Songs</a></li>
+                <li><a href="http://localhost/tunify/album.php">Albums</a></li>
+                <li><a href="http://localhost/tunify/artists.php">Artists</a></li>
+                <li><a href="http://localhost/tunify/playlists.php">Playlists</a></li>
                 <li><a href="subscriptions.html">Subscriptions</a></li>
             </ul>
         </nav>
